--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,10 @@
 html, body, section, .full-height {
-    height: auto;
+   display: inline-block;
+		width: 49%;
+		height: 100%;
+		vertical-align: top;
+		box-sizing: border-box;
+		padding: 0 20px;
 } 
 
 #pad{
