--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -7,8 +7,17 @@
 </head>
 
 <body class="container-fluid">
+<div class="header">
+		<i id="sidebar"></i>
+		<div>Online Markdown Editor</div>
+		<div>New document</div>
+	</div>
+	<div class="sidebar">
+		<div class="content" id="pages">
+		</div>
+	</div>
  <section class="row">
-        <textarea class="col-md-6 full-height" id="pad">Write your text here..</textarea>
+        <textarea class="col-md-6 full-height" id="pad">#Online Markdown Editor</textarea>
         <div class="col-md-6 full-height" id="markdown"></div>
     </section>
 
