--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@ html, body, section, .full-height {
 .header {
 		height: 48px;
 		width: 100%;
-		background-color: #22313F;
+		background-color: #9bceff;
 	}
 .sidebar {
 		width: 240px;
