--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -9,8 +9,8 @@
 <body class="container-fluid">
 <div class="header">
 		<i id="sidebar"></i>
-		<div>Online Markdown Editor</div>
-		<div>New document</div>
+		<div class="Title">Online Markdown Editor</div>
+		<button type="button" name="button1" id="new">New document</button>
 	</div>
 	<div class="sidebar">
 		<div class="content" id="pages">
