--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ button1{
 		padding: 12px;
 		font-size: 18px;
 		color: #FFFFFF;
-		font-family: 'Monaco', courier, monospace;
+		font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 	}
 #pad{
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
