--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ html, body, section, .full-height {
 		background-color: #9bceff;
 	}
 
-button1{
+new{
 		font-size: 14px;
 		padding: 10px;
 		cursor: pointer;
