--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -8,9 +8,8 @@
 
 <body class="container-fluid">
 <div class="header">
-		<i id="sidebar"></i>
 		<div class="Title">Online Markdown Editor</div>
-		<button type="button" name="button1" id="new">New document</button>
+		<div class=""button1">New document</div>
 	</div>
 	<div class="sidebar">
 		<div class="content" id="pages">
