--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ html, body, section, .full-height {
 		background-color: #9bceff;
 	}
 
-new{
+.button1{
 		font-size: 14px;
 		padding: 10px;
 		cursor: pointer;
@@ -34,7 +34,7 @@ new{
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    margin-top: 48px;
+    margin-top: 4px;
 }
 
 #markdown {
