--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -9,7 +9,7 @@
 <body class="container-fluid">
 <div class="header">
 		<div class="Title">Online Markdown Editor</div>
-		<div class=""button1">New document</div>
+		<div class="button1">New document</div>
 </div>
  <section class="row">
         <textarea class="col-md-6 full-height" id="pad">#Online Markdown Editor</textarea>
