--- a/public/style.css
+++ b/public/style.css
@@ -8,23 +8,21 @@ html, body, section, .full-height {
 	}
 
 .button1{
+	float:right;
 	text-align: center;
 color: #A52A2A;
 background-color: #F5F5DC;
 border-style: outset;
 border-color: #FFDEAD;
 border-width: 2px;
-height: 30%;
-width: 50%;
 font-size: 2vw;
-margin-left: 25%;
 font-style: italic;
 }
 .Title {
 		margin-left: 25px;
 		font-size: 18px;
 		color: #333333;
-		width: auto;
+		width: 20%;
 	}
 #pad{
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
