--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html, body, section, .full-height {
-		height: 100%;
+     height: 100%;
 } 
 .header {
 		height: 48px;
@@ -7,23 +7,18 @@ html, body, section, .full-height {
 		background-color: #9bceff;
 	}
 
-.button1{
-	float:right;
+.button1 {
+	margin-top: 5px;
+	margin-top: 25px;
 	text-align: center;
-color: #A52A2A;
-background-color: #F5F5DC;
-border-style: outset;
-border-color: #FFDEAD;
-border-width: 2px;
-font-size: 2vw;
-font-style: italic;
+	color: black;
+	background-color: ##3fa1ff;
+	border-style: outset;
+	border-width: 2px;
+	font-size: 2vw;
+	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
-.Title {
-		margin-left: 25px;
-		font-size: 18px;
-		color: #333333;
-		width: 20%;
-	}
+
 #pad{
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 
