--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,14 @@ html, body, section, .full-height {
 
 .button1 {
 	margin-top: 5px;
-	margin-top: 25px;
+	margin-left: 25px;
 	text-align: center;
 	color: black;
 	background-color: ##3fa1ff;
 	border-style: outset;
 	border-width: 2px;
+	height: 30%;
+	width: 150px;
 	font-size: 2vw;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
