--- a/public/style.css
+++ b/public/style.css
@@ -8,14 +8,15 @@ html, body, section, .full-height {
 	}
 
 .button1 {
+	margin-top: 4px;
 	text-align: center;
 	color: black;
 	background-color: ##3fa1ff;
 	border-style: outset;
 	border-width: 2px;
 	height: 30px;
-	width: 150px;
-	font-size: 2vw;
+	width: 200px;
+	font-size: 14px;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
 
