--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,8 @@ html, body, section, .full-height {
 	}
 
 .button1 {
-	padding: 4px;
+	margin-left: 40px;
+	padding: 2px;
 	text-align: center;
 	color: black;
 	background-color: ##3fa1ff;
