--- a/public/style.css
+++ b/public/style.css
@@ -9,10 +9,12 @@ html, body, section, .full-height {
 
 .button1 {
 	margin-left: 40px;
+	cursor: pointer;
+	margin-top: 6px;
 	padding: 2px;
 	text-align: center;
 	color: black;
-	background-color: ##3fa1ff;
+	background-color: #3fa1ff;
 	border-style: outset;
 	border-width: 2px;
 	height: 30px;
