--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@ html, body, section, .full-height {
      height: 100%;
 } 
 .header {
-	margin-top: 0px;
+	padding: 10px;
 		height: 50px;
 		width: 100%;
 		background-color: #9bceff;
@@ -11,7 +11,6 @@ html, body, section, .full-height {
 .button1 {
 	margin-left: 40px;
 	cursor: pointer;
-	margin-top: 10px;
 	padding: 2px;
 	text-align: center;
 	color: black;
