--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -12,10 +12,9 @@
 </div>
  <section class="row">
         <textarea class="col-md-6 full-height" id="pad">
-	#Online Markdown Editor 
-	### What is this?
-	Markdown is a lightweight markup language based on the formatting conventions that people naturally use in email.  As [John Gruber] writes on the [Markdown site][df1]
-
+#Online Markdown Editor 
+### What is this?
+Markdown is a lightweight markup language based on the formatting conventions that people naturally use in email. 
 > The overriding design goal for Markdown's
 > formatting syntax is to make it as readable
 > as possible. The idea is that a
