--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -11,7 +11,7 @@
 		<div class="button1">New document</div>
 </div>
  <section class="row">
-        <textarea class="col-md-6 full-height" id="pad">
+        <textarea class="col-md-5 full-height" id="pad">
 #Online Markdown Editor 
 ### What is this?
 Markdown is a lightweight markup language based on the formatting conventions that people naturally use in email. 
@@ -24,7 +24,8 @@ Markdown is a lightweight markup language based on the formatting conventions th
 > or formatting instructions.
 
 This text you see here is *actually* written in Markdown! To get a feel for Markdown's syntax, type some text into the left window and watch the results in the right.</textarea>
-        <div class="col-md-6 full-height" id="markdown"></div>
+        <div class="col-md-5 full-height" id="markdown"></div>
+	<div class="col-md-2 full-height" id="documents"></div>
     </section>
 
     <script src="https://cdn.rawgit.com/showdownjs/showdown/1.0.2/dist/showdown.min.js"></script>
