--- a/public/style.css
+++ b/public/style.css
@@ -22,17 +22,18 @@ html, body, section, .full-height {
 	font-size: 18px;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
-
+#documents{
+    margin-top: 4px;
+    border-left: 1px solid black;}
 #pad{
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
-
     border: none;
     overflow: auto;
-    outline: none;
+    /*outline: none;
     resize: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
-    box-shadow: none;
+    box-shadow: none;*/
     margin-top: 4px;
 }
 
