--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ html, body, section, .full-height {
 	}
 
 .button1 {
-	margin-left: 40px;
+	margin-left: 20px;
 	cursor: pointer;
 	padding: 2px;
 	text-align: center;
@@ -22,18 +22,16 @@ html, body, section, .full-height {
 	font-size: 18px;
 	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
+
 #documents{
     margin-top: 4px;
-    border-left: 1px solid black;}
+    border-right: 1px solid black;
+}
+
 #pad{
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
     border: none;
     overflow: auto;
-    /*outline: none;
-    resize: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;*/
     margin-top: 4px;
 }
 
