--- a/views/pad.ejs
+++ b/views/pad.ejs
@@ -8,7 +8,7 @@
 
 <body class="container-fluid">
 <div class="header">
-		<div class="button1">New document</div>
+		<div onclick="add()" class="button1">Save document</div>
 </div>
  <section class="row">
  	<div class="col-md-2 full-height" id="documents"></div>
